# llm-proxy

./: .env.example  .gitignore  Dockerfile  Dockerfile.analyzer  Dockerfile.api  Dockerfile.dev  README.md  config.yaml  docker-compose.dev.yml  docker-compose.prod.yaml  docker-compose.yml  pricing.yaml  pyproject.toml
.github/workflows/: ci.yml
analyzer/: __main__.py  body_reader.py  config.py  cost.py  fingerprint.py  parallel.py  store.py  worker.py
analyzer/extractors/: anthropic.py  base.py  generic.py  openai_compat.py  utils.py
api/: app.py  dependencies.py  query.py  rate_limit.py
api/routers/: admin.py  conversations.py  costs.py  errors.py  latency.py  models.py  overview.py  prompts.py
api/static/: analyzer.html  app.js  conversations.html  costs.html  errors.html  index.html  latency.html  models.html  prompts.html  raw-logs.html  style.css
app/: __init__.py  config.py  main.py  proxy.py  recorder.py  recorder_client.py  recorder_server.py  sse.py  startup.sh  ws.py
common/: __init__.py  logging.py
docs/: 01-requirements.md  02-architecture.md  03-development-plan.md  04-deployment.md  05-operations.md  06-litellm-searchlog-rules.md  07-dashboard-improvement.md  08-api-client-usage.md  README.md
scripts/: backup.sh  dev_cli.sh  migrate_bodies_to_db.py  smoke_prod.sh
tests/: conftest.py  test_config.py  test_http_proxy.py  test_recorder.py  test_ws_proxy.py
tests/test_analyzer/: test_anthropic_extractor.py  test_body_reader.py  test_cost.py  test_fingerprint.py  (+3 more)
tmp_bench/: bench.py  bench_micro.py  bench_quick.py  pricing.yaml
(+13 files in other folders)
