[project]
name = "llm-proxy"
version = "1.4.0"
description = "Transparent HTTP reverse proxy for recording LLM API traffic"
requires-python = ">=3.12"
dependencies = [
    "starlette>=0.36,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "httpx[http2]>=0.27,<1.0",
    "pyyaml>=6.0,<7.0",
    "websockets>=16.0",
    "fastapi>=0.110,<1.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "anyio>=4.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
